<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTakePhotoCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/takePhoto"
            android:textColor="@drawable/base_btnsel"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_theme" />

        <TextView
            android:id="@+id/dialogTakePhotoLauncher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/pictureResource"
            android:textColor="@drawable/base_btnsel"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/color_theme" />

        <TextView
            android:id="@+id/dialogDissmiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:padding="@dimen/dp_16"
            android:text="@string/baseCancle"
            android:textColor="@drawable/base_btnsel"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</RelativeLayout>